--- a/Ejercicio 1 Java/Inventario/nbproject/project.properties
+++ b/Ejercicio 1 Java/Inventario/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/paradigmas.jar
+dist.jar=${dist.dir}/Inventarioo.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/paradigmas
+dist.jlink.output=${dist.jlink.dir}/Inventarioo
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=paradigmas
-main.class=
+jlink.launcher.name=Inventarioo
+main.class=producto.Inventario
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
